--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,9 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  if loggedIn
+    p Logged in
+  else
+    a(href='/auth/twitter') Twitter login
+
+  a(href='/logout') Logout
