--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,14 @@
 doctype html
 html
   head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/css/bootstrap.min.css')
   body
-    block content
+    .container
+      include includes/navbar.jade
+      block content
+  script(src='/jquery.min.js')
+  script(src='/javascripts/bootstrap.min.js')
