:star2: New poll :star2:

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,4 +11,4 @@ html
       include includes/navbar.jade
       block content
   script(src='/jquery.min.js')
-  script(src='/javascripts/bootstrap.min.js')
+  script(src='/js/bootstrap.min.js')
