--- a/views/includes/navbar.jade
+++ b/views/includes/navbar.jade
@@ -6,12 +6,14 @@ nav.navbar.navbar-default.navbar-static-top
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='#')= siteName
+      a.navbar-brand(href='#') Voting App
     #nav-items.collapse.navbar-collapse
       ul.nav.navbar-nav.navbar-right
         li
           a(href='/') Home
         if loggedIn
+          li
+            a(href='/newpoll') New Poll
           li
             a(href='/logout') Logout
         else
