--- a/views/includes/navbar.jade
+++ b/views/includes/navbar.jade
@@ -6,7 +6,7 @@ nav.navbar.navbar-default.navbar-static-top
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='#') Voting App
+      a.navbar-brand(href='/') Voting App
     #nav-items.collapse.navbar-collapse
       ul.nav.navbar-nav.navbar-right
         li
