--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,9 +6,11 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title= title
     link(rel='stylesheet', href='/css/bootstrap.min.css')
+    block head
   body
     .container
       include includes/navbar.jade
       block content
   script(src='/jquery.min.js')
   script(src='/js/bootstrap.min.js')
+  block script
