--- a/views/includes/navbar.jade
+++ b/views/includes/navbar.jade
@@ -15,6 +15,8 @@ nav.navbar.navbar-default.navbar-static-top
           li
             a(href='/newpoll') New Poll
           li
+            a(href='/mypolls') My Polls
+          li
             a(href='/logout') Logout
         else
           li
